--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>JCRPClient32 V3 Mobile Data Center</title>
 <body>
 
-<center><img src="https://i.imgur.com/5h4OPDJ.png" alt="" usemap="#Map" />
+<center><img src="/img/splash.png" alt="" usemap="#Map" />
 <map name="Map" id="Map">
     <area alt="" title="CHP" href="C:\Users\Slinx\Downloads\MDC\chp.html" shape="poly" coords="243,430,265,398,304,401,290,366,317,337,281,322,276,284,244,303,212,283,206,322,169,335,194,365,184,400,220,399" />
     <area alt="" title="LSPD" href="#" shape="circle" coords="503,355,75" />
