--- a/chp.html
+++ b/chp.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>JCRPClient32 V3 Mobile Data Center</title>
-<center><img src="https://i.imgur.com/hkhtg3k.png" alt="" usemap="#Map" />
+<center><img src="/img/chp.png" alt="" usemap="#Map" />
 <map name="Map" id="Map">
 <body>
     <area alt="" title="CA Motor Vehicle Codes" href="http://leginfo.legislature.ca.gov/faces/codesTOCSelected.xhtml?tocCode=VEH&tocTitle=+Vehicle+Code+-+VEH" shape="rect" coords="246,307,602,497" />
