--- a/safd.html
+++ b/safd.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>JCRPClient32 V3 Mobile Data Center</title>
-<center><img src="https://i.imgur.com/Gk0PdI2.png" alt="" usemap="#Map" />
+<center><img src="/img/safd.png" alt="" usemap="#Map" />
 <map name="Map" id="Map">
 <body>
     <area alt="" title="Rules & Regulations" href="https://docs.google.com/spreadsheets/d/1_qa4hik9F84Mmb8osmtqL-1pQEDmBiC_haFxqMGNIMU/edit#gid=1026001555" shape="rect" coords="248,306,604,496" />
