--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
 <center><img src="/img/splash.png" alt="" usemap="#Map" />
 <map name="Map" id="Map">
-    <area alt="" title="CHP" href="C:\Users\Slinx\Downloads\MDC\chp.html" shape="poly" coords="243,430,265,398,304,401,290,366,317,337,281,322,276,284,244,303,212,283,206,322,169,335,194,365,184,400,220,399" />
+    <area alt="" title="CHP" href="\chp.html" shape="poly" coords="243,430,265,398,304,401,290,366,317,337,281,322,276,284,244,303,212,283,206,322,169,335,194,365,184,400,220,399" />
     <area alt="" title="LSPD" href="#" shape="circle" coords="503,355,75" />
     <area alt="" title="BCSO" href="#" shape="poly" coords="707,310,747,310,769,280,796,310,833,311,825,346,852,378,816,392,808,427,773,419,737,431,726,393,694,379,716,347" />
     <area alt="" title="SASP" href="#" shape="poly" coords="1036,429,1058,398,1096,400,1086,364,1112,336,1076,321,1070,283,1037,302,1004,284,998,321,962,336,984,365,978,400,,1015,399" />
-    <area alt="" title="SAFD" href="C:\Users\Slinx\Downloads\MDC\safd.html" shape="poly" coords="169,606,189,550,238,532,284,549,318,603,290,662,246,678,198,660,184,647" />
+    <area alt="" title="SAFD" href="\safd.html" shape="poly" coords="169,606,189,550,238,532,284,549,318,603,290,662,246,678,198,660,184,647" />
     <area alt="" title="USCG" href="#" shape="poly" coords="447,539,437,583,432,629,481,674,550,669,582,618,572,542,511,530" />
-    <area alt="" title="SAEC" href="C:\Users\Slinx\Downloads\MDC\saec.html" shape="circle" coords="240,851,74" />
+    <area alt="" title="SAEC" href="\saec.html" shape="circle" coords="240,851,74" />
 </map>
