--- a/chp.html
+++ b/chp.html
@@ -9,6 +9,6 @@
     <area alt="" title="10 Codes" href="http://slinxcad.weebly.com/uploads/5/0/3/0/50303435/10codes_orig.png" shape="rect" coords="248,724,604,913" />
     <area alt="" title="Duty Logs" href="https://goo.gl/forms/YFJnWKXOHC9iK2Wx2" shape="rect" coords="678,308,1034,497" />
     <area alt="" title="Collision Report Form" href="http://slinxcad.weebly.com/collision-report.html" shape="rect" coords="680,516,1034,707" />
-
+    <area alt="" title="Back" shape="rect" coords="53,836,128,903" />
 
 </map>
