--- a/safd.html
+++ b/safd.html
@@ -8,4 +8,5 @@
     <area alt="" title="Vehicle Information" href="https://docs.google.com/spreadsheets/d/1_qa4hik9F84Mmb8osmtqL-1pQEDmBiC_haFxqMGNIMU/edit#gid=1867747466" shape="rect" coords="246,515,604,707" />
     <area alt="" title="Roster" href="https://docs.google.com/spreadsheets/d/1_qa4hik9F84Mmb8osmtqL-1pQEDmBiC_haFxqMGNIMU/edit#gid=0" shape="rect" coords="248,724,602,913" />
     <area alt="" title="Duty Log" href="https://docs.google.com/forms/d/e/1FAIpQLSe4YxQjd4mGyfSsqvLkmEVhWV851JV-G-Y7Z52TwVHU1xwm1g/viewform?usp=sf_link" shape="rect" coords="678,307,1033,497" />
+    <area alt="" title="Back" shape="rect" coords="53,836,128,903" />
 </map>
