--- a/saec.html
+++ b/saec.html
@@ -5,4 +5,5 @@
 <map name="Map" id="Map">
 <body>
     <area alt="" title="Dispatch Officer Log" href="https://docs.google.com/spreadsheets/d/1GlY9BC2xm71cb90W3CZk6kioGF65X1KnuLYbMPlKm9o/edit#gid=0" shape="rect" coords="464,336,818,525" />
+    <area alt="" title="Back" shape="rect" coords="53,836,128,903" />
 </map>
