--- a/chp.html
+++ b/chp.html
@@ -4,7 +4,7 @@
 <center><img src="slinxc.github.io/img/chp.png" alt="" usemap="#Map" />
 <map name="Map" id="Map">
 <body>
-    <area alt="" title="CA Motor Vehicle Codes" href="" shape="rect" coords="246,307,602,497" />
+    <area alt="" title="CA Motor Vehicle Codes" href="http://leginfo.legislature.ca.gov/faces/codesTOCSelected.xhtml?tocCode=VEH&tocTitle=+Vehicle+Code+-+VEH" shape="rect" coords="246,307,602,497" />
     <area alt="" title="CA Felonies A-Z" href="http://www.shouselaw.com/crimes-a-z.html" shape="rect" coords="246,515,602,704" />
     <area alt="" title="10 Codes" href="http://slinxcad.weebly.com/uploads/5/0/3/0/50303435/10codes_orig.png" shape="rect" coords="248,724,604,913" />
     <area alt="" title="Duty Logs" href="https://goo.gl/forms/YFJnWKXOHC9iK2Wx2" shape="rect" coords="678,308,1034,497" />
