--- a/chp.html
+++ b/chp.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>JCRPClient32 V3 Mobile Data Center</title>
+<link rel="icon" type="image/x-icon" href="slinxc.github.io/favicon.ico">
 <center><img src="slinxc.github.io/img/chp.png" alt="" usemap="#Map" />
 <map name="Map" id="Map">
 <body>
