--- a/saec.html
+++ b/saec.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<link rel="shortcut icon" type="image/png" href="favicon.png">
 <title>JCRPClient32 V3 Mobile Data Center</title>
 <center><img src="slinxc.github.io/img/saec.png" alt="" usemap="#Map" />
 <map name="Map" id="Map">
