--- a/safd.html
+++ b/safd.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<link rel="icon" type="image/x-icon" href="slinxc.github.io/favicon.ico">
 <title>JCRPClient32 V3 Mobile Data Center</title>
 <center><img src="slinxc.github.io/img/safd.png" alt="" usemap="#Map" />
 <map name="Map" id="Map">
