--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>JCRPClient32 V3 Mobile Data Center</title>
 <body>
 
-<center><img src="slinxc.github.io/img/splash.png" alt="" usemap="#Map" />
+<center><img src="https://github.com/slinxc/slinxc.github.io/blob/master/img/splash.png?raw=true" alt="" usemap="#Map" />
 <map name="Map" id="Map">
     <area alt="" title="CHP" href="\chp.html" shape="poly" coords="243,430,265,398,304,401,290,366,317,337,281,322,276,284,244,303,212,283,206,322,169,335,194,365,184,400,220,399" />
     <area alt="" title="LSPD" href="#" shape="circle" coords="503,355,75" />
