--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <center><img src="https://github.com/slinxc/slinxc.github.io/blob/master/img/splash.png?raw=true" alt="" usemap="#Map" />
 <map name="Map" id="Map">
     <area alt="" title="CHP" href="\chp.html" shape="poly" coords="243,430,265,398,304,401,290,366,317,337,281,322,276,284,244,303,212,283,206,322,169,335,194,365,184,400,220,399" />
-    <area alt="" title="LSPD" href="#" shape="circle" coords="503,355,75" />
+    <area alt="" title="LSPD" href="\lspd.html" shape="circle" coords="503,355,75" />
     <area alt="" title="BCSO" href="#" shape="poly" coords="707,310,747,310,769,280,796,310,833,311,825,346,852,378,816,392,808,427,773,419,737,431,726,393,694,379,716,347" />
     <area alt="" title="SASP" href="#" shape="poly" coords="1036,429,1058,398,1096,400,1086,364,1112,336,1076,321,1070,283,1037,302,1004,284,998,321,962,336,984,365,978,400,,1015,399" />
     <area alt="" title="SAFD" href="\safd.html" shape="poly" coords="169,606,189,550,238,532,284,549,318,603,290,662,246,678,198,660,184,647" />
