--- a/chp.html
+++ b/chp.html
@@ -9,7 +9,7 @@
     <area alt="" title="CA Felonies A-Z" href="http://www.shouselaw.com/crimes-a-z.html" shape="rect" coords="246,515,602,704" />
     <area alt="" title="10 Codes" href="https://slinxc.github.io/apco.html" shape="rect" coords="248,724,604,913" />
     <area alt="" title="Duty Logs" href="https://goo.gl/forms/YFJnWKXOHC9iK2Wx2" shape="rect" coords="678,308,1034,497" />
-    <area alt="" title="Collision Report Form" href="/img/collisionreport.png" shape="rect" coords="680,516,1034,707" />
+    <area alt="" title="Collision Report Form" href="https://github.com/slinxc/slinxc.github.io/blob/master/img/collisionreport.png?raw=true" shape="rect" coords="680,516,1034,707" />
     <area alt="" title="Back" href="slinxc.github.io/index.html" shape="rect" coords="53,836,128,903" />
 
 </map>
