--- a/index.html
+++ b/index.html
@@ -64,21 +64,24 @@ window.location.replace("/fire.html");
 				</td>
 			</tr>
 			<tr>
-			<center>
 				<td>
+				<center>
 				<form method="post" name="login">
 					<input type="text" placeholder="Unit Number" class="auto-style5" name="callsign" style="height: 31px; width: 426px">
 				</td>
 			</tr>
+			</center>
 			<tr>
 				<td>
+				<center>
 					<input type="password" placeholder="Password" class="auto-style5" name="password" style="height: 31px; width: 426px" >
 					
 				&nbsp;</td>
 			</tr>
+			</center>
 			<tr>
 				<td>
-					
+					<center>
 					<input type="button" onClick="check(this.form)" value="Login" class="auto-style5" style="height: 34px; width: 70px"></form></td>
 			</tr></center>
 		</table>
