--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ window.location.replace("/fire.html");
 			</tr>
 			</center>
 			<tr>
-				<td>
+				<td style="height: 83px">
 					<center>
 					<input type="button" onClick="check(this.form)" value="Login" class="auto-style5" style="height: 34px; width: 70px"></form></td>
 			</tr></center>
