--- a/sahp.html
+++ b/sahp.html
@@ -5,11 +5,9 @@
 <center><img src="slinxc.github.io/img/sahp.png" alt="" usemap="#Map" />
 <map name="Map" id="Map">
 <body>
-    <area alt="" title="SA Motor Vehicle Codes" href="" shape="rect" coords="246,307,602,497" />
-    <area alt="" title="SA Felonies A-Z" href="http://www.shouselaw.com/crimes-a-z.html" shape="rect" coords="246,515,602,704" />
-    <area alt="" title="10 Codes" href="https://slinxc.github.io/apco.html" shape="rect" coords="248,724,604,913" />
+    <area alt="" title="APCO Phonetic Alphabet" href="https://slinxc.github.io/apcoabc.html" shape="rect" coords="246,307,602,497" />
+    <area alt="" title="APCO 10-Codes" href="http://www.shouselaw.com/crimes-a-z.html" shape="rect" coords="246,515,602,704" />
     <area alt="" title="Duty Logs" href="https://goo.gl/forms/YFJnWKXOHC9iK2Wx2" shape="rect" coords="678,308,1034,497" />
-    <area alt="" title="Collision Report Form" href="https://github.com/slinxc/slinxc.github.io/blob/master/img/collisionreport.png?raw=true" shape="rect" coords="680,516,1034,707" />
     <area alt="" title="Back" href="slinxc.github.io/index.html" shape="rect" coords="53,836,128,903" />
 
 </map>
