--- a/sahp.html
+++ b/sahp.html
@@ -2,12 +2,12 @@
 <head>
 <title>JCRPClient32 V3 Mobile Data Center</title>
 <link rel="icon" type="image/x-icon" href="slinxc.github.io/favicon.ico">
-<center><img src="slinxc.github.io/img/sahp.png" alt="" usemap="#Map" />
+<center><img src="/img/sahp.png" alt="" usemap="#Map" />
 <map name="Map" id="Map">
 <body>
-    <area alt="" title="APCO Phonetic Alphabet" href="https://slinxc.github.io/apcoabc.html" shape="rect" coords="246,307,602,497" />
-    <area alt="" title="APCO 10-Codes" href="http://www.shouselaw.com/crimes-a-z.html" shape="rect" coords="246,515,602,704" />
+    <area alt="" title="APCO Phonetic Alphabet" href="/abc.html" shape="rect" coords="246,307,602,497" />
+    <area alt="" title="APCO 10-Codes" href="/apco.html" shape="rect" coords="246,515,602,704" />
     <area alt="" title="Duty Logs" href="https://goo.gl/forms/YFJnWKXOHC9iK2Wx2" shape="rect" coords="678,308,1034,497" />
-    <area alt="" title="Back" href="slinxc.github.io/index.html" shape="rect" coords="53,836,128,903" />
+    <area alt="" title="Back" href="/index.html" shape="rect" coords="53,836,128,903" />
 
 </map>
