--- a/namelookup.html
+++ b/namelookup.html
@@ -45,7 +45,7 @@ alert(address(addresses));
 	</tr>
 	<tr>
 		<td><center>
-		<input type="button" onclick="location.href = 'slinxc.github.io/dbresult';" value="Search"</center style="height: 37px"></td>
+		<input type="button" onclick="location.href = 'slinxc.github.io/civresult';" value="Search"</center style="height: 37px"></td>
 	</tr>
 </table>
 
