--- a/namelookup.html
+++ b/namelookup.html
@@ -17,7 +17,7 @@ var items = [15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31,
 document.write(random_item(items));
 
 var addresses = ["3655 Wild Oats Dr", "2044 N Conker Ave", "2045 N Conker Ave", "2862 Hillcrest Ave", "2868 Hillcrest Ave", "2117 Milton Rd", "2874 Hillcrest Ave", "2866 Hillcrest Ave", "Eclipse Towers Apt 3", "Tinsel Towers Apt 42", "Richards Majestic Apt 2", "3677 Whispypound Dr", "4 Inegrety Way Apt 28", "Del Perro Heights Apt 4", "2113 Mad Wayne Thunder Dr", "Eclipse Towers Apt 31", "Eclipse Towers Apt 40", "Eclipse Towers Apt 5", "Eclipse Towers Apt 9", "Weazel Plz Apt 101", "Weazel Plz Apt 70", "Weazel Plz Apt 26", "Tinsel Towers Apt 29", "Tinsel Towers Apt 45", "Richards Majestic Apt 51", "4 Integrity Way Apt 35", "Richards Majestic Apt 4", "4 Integrity Way Apt 30", "2000 Rt 1", "197 Rt 68", "1200 Rt 68", "1932 Grapeseed Ave", "Unit 124 Popular St", "1 Strawberry Ave", "132 Paleto Blvd", "4401 Procopio Dr", "4584 Procopio Dr", "0232 Paleto Blvd", "140 Zancudo Ave", "1893 Grapeseed Ave", "8754 Rt 68", "870 Rt 68 Approach", "0897 Mirror Park Blvd", "1920 Senora Way", "118 Zancudo Ave"]
-alert(address(addresses));
+//alert(address(addresses));
 </script>
 <html>
 <head>
