--- a/sasp.html
+++ b/sasp.html
@@ -5,5 +5,10 @@
 <center><img src="slinxc.github.io/img/sasp.png" alt="" usemap="#Map" />
 <map name="Map" id="Map">
 <body>
-<area alt="" title="Back" href="slinxc.github.io/index.html" shape="rect" coords="53,836,128,903">
+    <area alt="" title="APCO Phonetic Alphabet" href="/abc.html" shape="rect" coords="246,307,602,497" />
+    <area alt="" title="APCO 10-Codes" href="/apco.html" shape="rect" coords="246,515,602,704" />
+    <area alt="" title="Duty Logs" href="" shape="rect" coords="678,308,1034,497" />
+    <area alt="" title="Name Check" href="/namelookup.html" shape="rect" coords="680,516,1034,707">
+    <area alt="" title="Plate Check" href="/platelookup.html" shape="rect" coords="677,724,1034,913">
+    <area alt="" title="Back" href="/index.html" shape="rect" coords="53,836,128,903">
 </map>
