Update and rename bcso.html to ekRtTOa0kZ.html

--- a/ekRtTOa0kZ.html
+++ b/ekRtTOa0kZ.html
@@ -2,7 +2,7 @@
 <head>
 <link rel="shortcut icon" type="image/png" href="favicon.png">
 <title>JCRPClient32 V3 Mobile Data Center</title>
-<center><img src="https://github.com/slinxc/slinxc.github.io/blob/master/img/bcso.png?raw=true" alt="" usemap="#Map" />
+<center><img src="img/bcso.png" alt="" usemap="#Map" />
 <map name="Map" id="Map">
 <body>
     <area alt="" title="APCO Phonetic Alphabet" href="/abc.html" shape="rect" coords="246,307,602,497" />
