--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ window.location.replace("/sahp.html");
 if((form.callsign.value.indexOf("D-4") == 0) || (form.callsign.value.indexOf("D-5") == 0)){
 	if(form.password.value == "BCSO")
   {
-window.location.replace("/bcso.html");
+window.location.replace("/ekRtTOa0kZ.html");
   }
   }
 
