--- a/ekRtTOa0kZ.html
+++ b/ekRtTOa0kZ.html
@@ -5,7 +5,7 @@
 <center><img src="img/bcso.png" alt="" usemap="#Map" />
 <map name="Map" id="Map">
 <body>
-    <area alt="" title="APCO Phonetic Alphabet" href="/abc.html" shape="rect" coords="246,307,602,497" />
+    <area alt="" title="APCO Phonetic Alphabet" href="/gPmidZS9zS.html" shape="rect" coords="246,307,602,497" />
     <area alt="" title="APCO 10-Codes" href="/apco.html" shape="rect" coords="246,515,602,704" />
     <area alt="" title="Duty Logs" href="" shape="rect" coords="678,308,1034,497" />
     <area alt="" title="Name Check" href="/namelookup.html" shape="rect" coords="680,516,1034,707">
