--- a/namelookup.html
+++ b/namelookup.html
@@ -25,7 +25,7 @@
 	</tr>
 	<tr>
 		<td><center>
-		<input type="button" onclick="location.href = 'slinxc.github.io/civresult';" value="Search"</center style="height: 37px"></td>
+		<input type="button" onclick="location.href = '/xA3WaqXLub.html';" value="Search"</center style="height: 37px"></td>
 	</tr>
 </table>
 
