--- a/Xv6UxpxNK1.html
+++ b/Xv6UxpxNK1.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta content="en-us" http-equiv="Content-Language">
-<link rel="shortcut icon" type="image/png" href="../../My%20Web%20Sites/favicon.png">
+<link rel="shortcut icon" type="image/png" href="favicon.png">
 <title>JCRPClient32 V3 Mobile Data Center</title>
 
 
 <body style="height: 960px; ">
-<div style="height: 960px; background-image:url('https://raw.githubusercontent.com/slinxc/slinxc.github.io/master/img/namelookup.png');background-repeat:no-repeat;background-position:center"
+<div style="height: 960px; background-image:url('/img/namelookup.png');background-repeat:no-repeat;background-position:center"
 	
 </div>
 
