Update and rename platelookup.html to ynqlgdpEHz.html

--- a/ynqlgdpEHz.html
+++ b/ynqlgdpEHz.html
@@ -27,6 +27,6 @@
 	</tr>
 	<tr>
 		<td><center>
-		<input type="button" onclick="location.href = 'slinxc.github.io/vehresult';" value="Search"</center style="height: 37px"></td>
+		<input type="button" onclick="location.href = '/asFJfqKWpJ.html';" value="Search"</center style="height: 37px"></td>
 	</tr>
 </table>
