--- a/xA3WaqXLub.html
+++ b/xA3WaqXLub.html
@@ -1,7 +1,7 @@
 ﻿<html>
 <head>
 <meta content="en-us" http-equiv="Content-Language">
-<link rel="shortcut icon" type="image/png" href="../../../My%20Web%20Sites/favicon.png">
+<link rel="shortcut icon" type="image/png" href="favicon.png">
 <title>JCRPClient32 V3 Mobile Data Center</title>
 
 <style type="text/css">
