--- a/xA3WaqXLub.html
+++ b/xA3WaqXLub.html
@@ -12,7 +12,7 @@
 
 
 <body style="height: 960px; ">
-<div style="height: 960px; background-image:url('https://github.com/slinxc/slinxc.github.io/blob/master/img/civresults.png?raw=true'); background-repeat:no-repeat;background-position:center"
+<div style="height: 960px; background-image:url('/img/civresults.png'); background-repeat:no-repeat;background-position:center"
 	
 </div>
 
