--- a/gPmidZS9zS.html
+++ b/gPmidZS9zS.html
@@ -2,7 +2,7 @@
 <head>
 <link rel="shortcut icon" type="image/png" href="favicon.png">
 <title>JCRPClient32 V3 Mobile Data Center</title>
-<center><img src="slinxc.github.io/img/apcoabc.png" alt="" usemap="#Map" />
+<center><img src="/img/apcoabc.png" alt="" usemap="#Map" />
 <map name="Map" id="Map">
 <body>
 <area alt="" title="Back" href="slinxc.github.io/index.html" shape="rect" coords="53,836,128,903">
