--- a/eHiSquJOOL.html
+++ b/eHiSquJOOL.html
@@ -5,5 +5,5 @@
 <center><img src="slinxc.github.io/img/apco.png" alt="" usemap="#Map" />
 <map name="Map" id="Map">
 <body>
-<area alt="" title="Back" href="slinxc.github.io/index.html" shape="rect" coords="53,836,128,903">
+<area alt="" title="Back" href="/index.html" shape="rect" coords="53,836,128,903">
 </map>
