--- a/asFJfqKWpJ.html
+++ b/asFJfqKWpJ.html
@@ -1,7 +1,7 @@
 ﻿<html>
 <head>
 <meta content="en-us" http-equiv="Content-Language">
-<link rel="shortcut icon" type="image/png" href="../../../My%20Web%20Sites/favicon.png">
+<link rel="shortcut icon" type="image/png" href="favicon.png">
 <title>JCRPClient32 V3 Mobile Data Center</title>
 
 
@@ -18,7 +18,7 @@
 
 
 <body style="height: 960px; ">
-<div style="height: 960px; background-image:url('https://github.com/slinxc/slinxc.github.io/blob/master/img/vehresults.png?raw=true'); background-repeat:no-repeat;background-position:center"
+<div style="height: 960px; background-image:url('/img/vehresults.png'); background-repeat:no-repeat;background-position:center"
 	
 </div>
 
