--- a/9jJATovXCr.html
+++ b/9jJATovXCr.html
@@ -2,7 +2,7 @@
 <head>
 <title>JCRPClient32 V3 Mobile Data Center</title>
 <link rel="icon" type="image/x-icon" href="slinxc.github.io/favicon.ico">
-<center><img src="slinxc.github.io/img/sahp.png" alt="" usemap="#Map" />
+<center><img src="/img/sahp.png" alt="" usemap="#Map" />
 <map name="Map" id="Map">
 <body>
     <area alt="" title="APCO Phonetic Alphabet" href="/gPmidZS9zS.html" shape="rect" coords="246,307,602,497" />
