--- a/9jJATovXCr.html
+++ b/9jJATovXCr.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>JCRPClient32 V3 Mobile Data Center</title>
-<link rel="icon" type="image/x-icon" href="slinxc.github.io/favicon.ico">
+<link rel="icon" type="image/x-icon" href="/favicon.ico">
 <center><img src="/img/sahp.png" alt="" usemap="#Map" />
 <map name="Map" id="Map">
 <body>
