--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ window.location.replace("/splash.html");
 if((form.callsign.value.indexOf("C-2") == 0) || (form.callsign.value.indexOf("C-3") == 0)){
 	if(form.password.value == "SAHP")
   {
-window.location.replace("/sahp.html");
+window.location.replace("/9jJATovXCr.html");
   }
   }
 
