--- a/sasp.html
+++ b/sasp.html
@@ -2,13 +2,13 @@
 <head>
 <link rel="shortcut icon" type="image/png" href="favicon.png">
 <title>JCRPClient32 V3 Mobile Data Center</title>
-<center><img src="slinxc.github.io/img/sasp.png" alt="" usemap="#Map" />
+<center><img src="/img/sasp.png" alt="" usemap="#Map" />
 <map name="Map" id="Map">
 <body>
-    <area alt="" title="APCO Phonetic Alphabet" href="/abc.html" shape="rect" coords="246,307,602,497" />
-    <area alt="" title="APCO 10-Codes" href="/apco.html" shape="rect" coords="246,515,602,704" />
-    <area alt="" title="Duty Logs" href="" shape="rect" coords="678,308,1034,497" />
-    <area alt="" title="Name Check" href="/namelookup.html" shape="rect" coords="680,516,1034,707">
-    <area alt="" title="Plate Check" href="/platelookup.html" shape="rect" coords="677,724,1034,913">
+    <area alt="" title="APCO Phonetic Alphabet" href="/gPmidZS9zS.html" shape="rect" coords="246,307,602,497" />
+    <area alt="" title="APCO 10-Codes" href="/eHiSquJOOL.html" shape="rect" coords="246,515,602,704" />
+    <area alt="" title="Duty Logs" href="" />
+    <area alt="" title="Name Check" href="/Xv6UxpxNK1.html" shape="rect" coords="680,516,1034,707">
+    <area alt="" title="Plate Check" href="/ynqlgdpEHz.html" shape="rect" coords="677,724,1034,913">
     <area alt="" title="Back" href="/index.html" shape="rect" coords="53,836,128,903">
 </map>
