--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ window.location.replace("/ekRtTOa0kZ.html");
 if((form.callsign.value.indexOf("E-6") == 0) || (form.callsign.value.indexOf("E-7") == 0)){
 	if(form.password.value == "SASP")
   {
-window.location.replace("/sasp.html");
+window.location.replace("/AQXLVJGSDy.html");
   }
   }
 
