--- a/F4whDoqy6B.html
+++ b/F4whDoqy6B.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<link rel="icon" type="image/x-icon" href="slinxc.github.io/favicon.ico">
+<link rel="icon" type="image/x-icon" href="/favicon.ico">
 <title>JCRPClient32 V3 Mobile Data Center</title>
-<center><img src="slinxc.github.io/img/safd.png" alt="" usemap="#Map" />
+<center><img src="/img/safd.png" alt="" usemap="#Map" />
 <map name="Map" id="Map">
 <body>
     <area alt="" title="Duty Log" href="https://docs.google.com/forms/d/e/1FAIpQLScjwKUyLhpmyqkNuq-3--ifBByI0dgE8lPbYEIzZOqBRNfzaw/viewform" shape="rect" coords="678,307,1033,497" />
-    <area alt="" title="Back" href="slinxc.github.io/index.html" shape="rect" coords="53,836,128,903" />
+    <area alt="" title="Back" href="/index.html" shape="rect" coords="53,836,128,903" />
 </map>
