--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ window.location.replace("/AQXLVJGSDy.html");
 if((form.callsign.value.indexOf("F-0") == 0) || (form.callsign.value.indexOf("F-1") == 0) || (form.callsign.value.indexOf("F-2") == 0) || (form.callsign.value.indexOf("F-3") == 0) || (form.callsign.value.indexOf("F-4") == 0) || (form.callsign.value.indexOf("F-5") == 0) || (form.callsign.value.indexOf("F-6") == 0) || (form.callsign.value.indexOf("F-7") == 0)) {
 	if(form.password.value == "FIRE")
   {
-window.location.replace("/fire.html");
+window.location.replace("/F4whDoqy6B.html");
   }
   }
 
