--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	 if((form.callsign.value.indexOf("A-0") == 0) || (form.callsign.value.indexOf("A-1") == 0) || (form.callsign.value.indexOf("A-2") == 0) || (form.callsign.value.indexOf("A-3") == 0) || (form.callsign.value.indexOf("A-4") == 0)){
 	if(form.password.value == "ADMIN")
   {
-window.location.replace("/splash.html");
+window.location.replace("/X6AYFC8chh.html");
   }
   }
 
