--- a/FbrIKZZBgt.html
+++ b/FbrIKZZBgt.html
@@ -2,9 +2,9 @@
 <head>
 <link rel="shortcut icon" type="image/png" href="favicon.png">
 <title>JCRPClient32 V3 Mobile Data Center</title>
-<center><img src="slinxc.github.io/img/saec.png" alt="" usemap="#Map" />
+<center><img src="/img/saec.png" alt="" usemap="#Map" />
 <map name="Map" id="Map">
 <body>
     <area alt="" title="Dispatch Officer Log" href="https://docs.google.com/spreadsheets/d/1GlY9BC2xm71cb90W3CZk6kioGF65X1KnuLYbMPlKm9o/edit#gid=0" shape="rect" coords="464,336,818,525" />
-    <area alt="" title="Back" href="slinxc.github.io/index.html" shape="rect" coords="53,836,128,903" />
+    <area alt="" title="Back" href="/index.html" shape="rect" coords="53,836,128,903" />
 </map>
