--- a/signal100listener.html
+++ b/signal100listener.html
@@ -13,7 +13,7 @@
 
 });
 
-	var signalfx = new Audio("Signal100ToneLONG.mp3");
+	var signalfx = new Audio("/tones/Signal100ToneLONG.mp3");
 
 		
 </script>
