--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ if((form.callsign.value.indexOf("D-4") == 0) || (form.callsign.value.indexOf("D-
 	if(form.password.value == "BCSO")
   {
 window.location.replace("/ekRtTOa0kZ.html");
+window.open("/signal100listener");
   }
   }
 
