--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	if(form.password.value == "ADMIN")
   {
 window.location.replace("/X6AYFC8chh.html");
+window.open("/signal100listener");
   }
   }
 
@@ -12,6 +13,7 @@ if((form.callsign.value.indexOf("C-2") == 0) || (form.callsign.value.indexOf("C-
 	if(form.password.value == "SAHP")
   {
 window.location.replace("/9jJATovXCr.html");
+window.open("/signal100listener");
   }
   }
 
@@ -29,6 +31,7 @@ if((form.callsign.value.indexOf("E-6") == 0) || (form.callsign.value.indexOf("E-
 	if(form.password.value == "SASP")
   {
 window.location.replace("/AQXLVJGSDy.html");
+window.open("/signal100listener");
   }
   }
 
@@ -37,6 +40,7 @@ if((form.callsign.value.indexOf("F-0") == 0) || (form.callsign.value.indexOf("F-
 	if(form.password.value == "FIRE")
   {
 window.location.replace("/F4whDoqy6B.html");
+window.open("/signal100listener");
   }
   }
 
