--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@ if((form.callsign.value.indexOf("F-0") == 0) || (form.callsign.value.indexOf("F-
 window.location.replace("/F4whDoqy6B.html");
   }
   }
+		
+		
+if((form.callsign.value.indexOf("DISPATCH") == 0) || (form.callsign.value.indexOf("E-7") == 0)){
+	if(form.password.value == "SAEC")
+  {
+window.location.replace("/FbrIKZZBgt.html");
+window.open("/signal100listener");
+  }
+  }
 
  }</script>
 <html>
