--- a/FbrIKZZBgt.html
+++ b/FbrIKZZBgt.html
@@ -6,5 +6,6 @@
 <map name="Map" id="Map">
 <body>
     <area alt="" title="Dispatch Officer Log" href="https://docs.google.com/spreadsheets/d/1GlY9BC2xm71cb90W3CZk6kioGF65X1KnuLYbMPlKm9o/edit#gid=0" shape="rect" coords="464,336,818,525" />
+    <area alt="" title="Activate Signal-100" href="https://docs.google.com/spreadsheets/d/1gjdYExQDCzJL0oR2bwpNQpRaH6AbX2QkmPIn_moG6YM/edit#gid=0" shape="rect" coords="462,562,816,749" />
     <area alt="" title="Back" href="/index.html" shape="rect" coords="53,836,128,903" />
 </map>
