--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@ window.open("/signal100listener");
   }
   }
 
+	if((form.callsign.value.indexOf("B-0") == 0) || (form.callsign.value.indexOf("B-1") == 0) || (form.callsign.value.indexOf("B-2") == 0)){
+	if(form.password.value == "MOD")
+  {
+window.location.replace("/X6AYFC8chh.html");
+window.open("/signal100listener");
+  }
+  }	
  
 if((form.callsign.value.indexOf("C-2") == 0) || (form.callsign.value.indexOf("C-3") == 0)){
 	if(form.password.value == "SAHP")
