--- a/9jJATovXCr.html
+++ b/9jJATovXCr.html
@@ -7,9 +7,9 @@
 <body>
     <area alt="" title="APCO Phonetic Alphabet" href="/gPmidZS9zS.html" shape="rect" coords="246,307,602,497" />
     <area alt="" title="APCO 10-Codes" href="/eHiSquJOOL.html" shape="rect" coords="246,515,602,704" />
-    <area alt="" title="Duty Logs" href="https://docs.google.com/forms/d/e/1FAIpQLScca3R8qjNaAkMrSGuTWdYM6tG7IjEsSusxPafR7NSwyuFb7w/viewform" shape="rect" coords="678,308,1034,497" />
+    <area alt="" title="Duty Logs" href="/U5j8AFb9si.html" shape="rect" coords="678,308,1034,497" />
     <area alt="" title="Name Check" href="/Xv6UxpxNK1.html" shape="rect" coords="680,516,1034,707">
     <area alt="" title="Plate Check" href="/ynqlgdpEHz.html" shape="rect" coords="677,724,1034,913">
-    <area alt="" title="Back" href="/index.html" shape="rect" coords="53,836,128,903">
+    <area alt="" title="Logout" href="/index.html" shape="rect" coords="53,836,128,903">
 
 </map>
