--- a/F4whDoqy6B.html
+++ b/F4whDoqy6B.html
@@ -6,5 +6,5 @@
 <map name="Map" id="Map">
 <body>
     <area alt="" title="Duty Log" href="https://docs.google.com/forms/d/e/1FAIpQLScjwKUyLhpmyqkNuq-3--ifBByI0dgE8lPbYEIzZOqBRNfzaw/viewform" shape="rect" coords="678,307,1033,497" />
-    <area alt="" title="Back" href="/index.html" shape="rect" coords="53,836,128,903" />
+    <area alt="" title="Logout" href="/index.html" shape="rect" coords="53,836,128,903" />
 </map>
