--- a/U5j8AFb9si.html
+++ b/U5j8AFb9si.html
@@ -1,7 +1,7 @@
 ﻿<html>
 <head>
 <meta content="en-us" http-equiv="Content-Language">
-<link rel="shortcut icon" type="image/png" href="../../My%20Web%20Sites/favicon.png">
+<link rel="shortcut icon" type="image/png" href="favicon.png">
 <title>JCRPClient32 V3 Mobile Data Center</title>
 
 
@@ -44,14 +44,14 @@
 
 
 <body style="height: 960px; ">
-<div style="height: 960px; background-image:url('../../My%20Web%20Sites/img/status.png'); background-repeat:no-repeat;background-position:center"
+<div style="height: 960px; background-image:url('/img/status.png'); background-repeat:no-repeat;background-position:center"
 <table style="width: 100%">
 	<tr>
 		<td>&nbsp;</td>
 	</tr>
 	<tr>
 		<td><center>
-		<script src="../../My%20Web%20Sites/jquery-latest.min.js" type="text/javascript"></script>
+		<script src="jquery-latest.min.js" type="text/javascript"></script>
 
 			<form id="input-form" action="" method="POST" target="no-target" class="auto-style2">
 			  <input id="callsign" placeholder="Callsign" name="callsign" class="auto-style4"><br class="auto-style4">
