--- a/U5j8AFb9si.html
+++ b/U5j8AFb9si.html
@@ -51,7 +51,7 @@
 	</tr>
 	<tr>
 		<td><center>
-		<script src="jquery-latest.min.js" type="text/javascript"></script>
+		<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 
 			<form id="input-form" action="" method="POST" target="no-target" class="auto-style2">
 			  <input id="callsign" placeholder="Callsign" name="callsign" class="auto-style4"><br class="auto-style4">
