--- a/U5j8AFb9si.html
+++ b/U5j8AFb9si.html
@@ -55,7 +55,7 @@
 
 			<form id="input-form" action="" method="POST" target="no-target" class="auto-style2">
 			  <input id="callsign" placeholder="Callsign" name="callsign" class="auto-style4"><br class="auto-style4">
-  			<button class="auto-style3" id="form-submit" type="submit">Submit</button>
+  			<button class="button" id="form-submit" type="submit">Submit</button>
 			</form>
 
 			<iframe src="#" id="no-target" name="no-target" style="visibility:hidden"></iframe>
